# topoi

./: .editorconfig  .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  bower.json  default.nix  package.yaml  project.nix  proof.tpl  release.nix  result  sexp.test  stack.yaml  topoi.cabal
compiler/src/: MyLib.hs  README.md
compiler/src/App/: Env.hs  Monad.hs
compiler/src/Core/: Parser.hs  RawAST.hs
compiler/src/Parse/: Sexpr.hs
docs/: nbe-notes.md  polysemy-clean-architecture.md
examples/: typeSig.tp
rust/: Cargo.toml
rust/ast/: Cargo.toml
rust/ast/src/: expression.rs  lib.rs  node.rs  source.rs
rust/eval/: Cargo.toml
rust/eval/src/: main.rs
rust/lexer/: Cargo.toml
rust/lexer/src/: lib.rs
rust/parser/: Cargo.toml
rust/parser/src/: ast.rs  expression.rs  lib.rs  main.rs
samples/: answer.tp  example.txt
src/: AST.hs  Main.purs
src/AST/: Source.hs
src/Analyze/: Typecheck.hs
src/Parse/: CharacterCodes.hs  Combinator.hs  Internal.hs  Lexer.hs  Primitives.hs  README.md  SExprParser.hs  SExpression.hs  Space.hs  String.hs  TokenStream.hs  Topoi.hs  TopoiParser.hs  Utils.hs
src/Reporting/: Annotation.hs  Error.hs
src/Reporting/Error/: Syntax.hs
src/Syntax/: Abstract.hs  Concrete.hs  Sexpr.hs
src/Terminal/: Main.hs
src/Type/: Error.hs  Infer.hs  Infer.hs.txt  SymbolTable.hs  Type.hs  TypedExpr.hs
terminal/src/: Main.hs
topoi/: .gitignore  README.md  package.yaml  stack.yaml  topoi.cabal  topoi.cabal.old
topoi/app/CLI/: Main.hs
topoi/examples/: aaa.tp
topoi/src/: Hello.hs
topoi/src/Topoi/: EvalNbE.hs
topoi/src/frontend/parser-rs/: Cargo.toml  module_where.topoi
topoi/src/frontend/parser-rs/ast/: Cargo.toml
topoi/src/frontend/parser-rs/lexer/: Cargo.toml
topoi/src/frontend/parser-ts/: package.json  tsconfig.json
topoi/topoi/: README.md  package.yaml  topoi.cabal
topoi/topoi-compiler/: package.yaml  topoi-compiler.cabal
topoi/topoi-compiler/src/Topoi/: Compiler.hs  EvalNbE.hs  TypeCheck.hs
topoi/topoi-lexer/: README.md
topoi/topoi-lexer/rustbits/: Cargo.toml
topoi/topoi-tokenizer/: package.yaml  topoi-tokenizer.cabal
topoi/topoi/src/: Main.hs
(+34 files in other folders)
