cabal-version:       2.4

name:                topoi
version:             0.1.0.0
-- synopsis:
-- description:
bug-reports:         https://github.com/topoi-lang/topoi/issues
license:             MIT
license-file:        LICENSE
author:              Zheng Yan PEH
maintainer:          zypeh.geek@gmail.com
copyright:           Copyright (c) 2020, Topoi-lang
category:            Compiler, Language
extra-source-files:  README.md

common haskell
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wno-name-shadowing

executable topoi
  import: haskell
  hs-source-dirs:
    compiler/src

  main-is:
    Main.hs

  other-modules:
    MyLib

  build-depends:
    base ^>=4.12.0.0
    megaparsec >= 8.0.0
