cabal-version:  3.0
name:           topoi
version:        0.1.0.0
category:       Compiler, Language
bug-reports:    https://github.com/topoi-lang/topoi/issues
author:         Topoi team
maintainer:     zypeh.geek@gmail.com
copyright:      Copyright (c) 2020, Topoi-lang
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

tested-with: GHC >= 8.8.1

common haskell
  default-language: Haskell2010
  default-extensions:
      BangPatterns
      OverloadedStrings
      StrictData
      MagicHash
      UnboxedTuples
      PatternSynonyms
      BlockArguments
      LambdaCase
  ghc-options:
      -Wall
      -Wextra
      -funbox-strict-fields

common executable-flags
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N

executable topoi
  import: haskell, executable-flags
  main-is: Terminal/Main.hs
  hs-source-dirs: src
  other-modules:
      Parse.Lexer
      Parse.TokenStream
      Parse.Topoi
      Parse.Utils
      Reporting.Annotation
      Reporting.Error
      Syntax.Abstract
      Syntax.Concrete
      Type.Error
      Paths_topoi
  build-depends:
      base < 5
    , bytestring
    , containers
    , lexer-applicative
    , megaparsec
    , mtl
    , parser-combinators
    , regex-applicative
    , srcloc
    , text
    , unordered-containers
